<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addDeviceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_device"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/DeviceNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/device_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDeviceTextView"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/ApSSIDEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/ap_ssid"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeviceNameEditText"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/ApPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/ap_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApSSIDEditText"
        app:layout_constraintVertical_bias="0.045" />


    <EditText
        android:id="@+id/ApIPEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/ap_ip_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApPasswordEditText"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/StaSSIDEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/sta_ssid"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApIPEditText"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/StaPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/sta_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaSSIDEditText"
        app:layout_constraintVertical_bias="0.045" />


    <EditText
        android:id="@+id/StaIPEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        android:hint="@string/sta_ip_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaPasswordEditText"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/grey"
        android:text="@string/cancel"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaIPEditText"
        app:layout_constraintVertical_bias="0.252" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:backgroundTint="@color/grey"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaIPEditText"
        app:layout_constraintVertical_bias="0.252" />


</androidx.constraintlayout.widget.ConstraintLayout>